# TOTNet

./: README.md  crop_video.sh  demo_football.sh  pyproject.toml  requirements.txt  run_demo.sh
docs/: BALL_TRACKING_ANNOTATION_GUI_SPEC.md  TRAINING_FOOTBALL.md
notebooks/: train_football_colab.ipynb
scripts/: train_football_cloud.sh
src/: demo.py  demo.sh  main.py  slurm-5959.out  train.sh
src/config/: config.py
src/data_process/: data_utils.py  dataloader.py  prepare_football_data.py  video_loader.py
src/model/: model_utils.py  wasb.py
src/post_process/: __init__.py  ball_crop_video.py  smoothing.py
src/utils/: train_utils.py
